rca/static_src/sass/components/_tab-item.scss
.tab-item {
    @include font-size(xxs);
    @include underline-hover();
    $root: &;
    margin-right: ($gutter * 1.5);
    position: relative;
    white-space: nowrap;
    text-decoration: none; // overriding mixin

    &:last-child {
        display: inline-block;
        border-right-width: $gutter;
        border-right-color: transparent;
        border-right-style: solid;

        @include media-query(medium) {
            border-right-width: ($gutter * 3);
        }

        @include media-query(large) {
            border-right-width: 0;
        }
    }

    &.is-active {
        @include underline-hover-target-reset();
    }

    .bg--dark & {
        color: $color--meta-darkbg;

        &:hover,
        &.active {
            color: $color--white;
        }

        &.link--tertiary {
            color: $color--meta-darkbg;

            &:hover {
                color: $color--white;
            }
        }
    }

    .bg--light & {
        color: $color--meta-lightbg;

        &:hover,
        &.active {
            color: $color--black;
        }

        &.link--tertiary {
            color: $color--meta-lightbg;

            &:hover {
                color: $color--black;
            }
        }
    }

    .js-is-sticky.jump-nav & {
        color: $color--meta-lightbg;

        &:hover {
            color: $color--black;
        }

        &.is-active {
            color: $color--black;
        }
    }

    .jump-nav & {
        font-family: $font--primary;
        font-weight: $weight--normal;
    }
}

